// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-lg navbar-light bg-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="jobly"
        >
          Jobly
        </a>
        <a
          class="nav-link"
          href="/companies"
        >
          Companies
        </a>
        <a
          class="nav-link"
          href="/jobs"
        >
          Jobs
        </a>
        <a
          class="nav-link"
          href="/profile"
        >
          Profile
        </a>
        <button>
           Log Out Janet   
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-lg navbar-light bg-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="jobly"
        >
          Jobly
        </a>
        <a
          class="nav-link"
          href="/signup"
        >
          Signup
        </a>
        <a
          class="nav-link"
          href="/login"
        >
          Login
        </a>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
